external/1/2/3/4/argocd-virtualservice/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: argocd-server
spec:
  gateways:
    - kubeflow/kubeflow-gateway
  hosts:
    - "*"
  http:
    - match:
        - uri:
            prefix: /argocd/
      rewrite:
        uri: "/"
      route:
        - destination:
            host: argocd-server.argocd.svc.cluster.local
            port:
              number: 80
